--- a/CCDE/MQTT-HiveMQ/app/src/main/res/values/strings.xml
+++ b/CCDE/MQTT-HiveMQ/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MQTT_HiveMQ</string>
-    <string name="hivemq_url">ssl://15d9dcdf33e3466799ebbd0151f866ee.s2.eu.hivemq.cloud</string>
-    <string name="hivemq_user">Stingaaa</string>
-    <string name="hivemq_password">Satch01#</string>
+    <string name="hivemq_url">ssl://Add your own</string>
+    <string name="hivemq_user">Add your own</string>
+    <string name="hivemq_password">Add your own#</string>
 </resources>
